src/test/compile-fail/bad-main.rs
// error-pattern: bad type signature

fn main(int x) {
}
